// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id             Int      @id @default(autoincrement())
  firstname      String
  lastname       String
  profilePicture String? // optional field
  createdAt      DateTime @default(now())
  updatedAt      DateTime @default(now()) @updatedAt
  status         Status   @default(ACTIVE)
  role           Role     @default(USER)
  Auth           Auth?
}

model Auth {
  userid     Int       @id
  email      String    @unique
  password   String
  isVerified Boolean   @default(false)
  OTP        String?
  User       User      @relation(fields: [userid], references: [id], onDelete: Cascade)
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @default(now()) @updatedAt
  Session    Session[]
}

model Session {
  id           Int      @id @default(autoincrement())
  userid       Int
  refreshToken String
  createdAt    DateTime @default(now())
  Auth         Auth     @relation(fields: [userid], references: [userid], onDelete: Cascade)
}

enum Status {
  ACTIVE
  INACTIVE
}

enum Role {
  USER
  ADMIN
}
